# eye-health-202020

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/actions/: release.ts
.github/workflows/: release.yml
src/: App.vue  constants.ts  main.ts  storage.ts  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  utils.rs
src/assets/: main.scss  mixins.scss
src/components/: AppButton.vue  CheckboxButton.vue  Countdown.vue  Icons.ts
